--- a/styles.css
+++ b/styles.css
@@ -487,8 +487,8 @@ header p {
 
   .other-zone-section h2,
   .history h2 {
-    font-size: 1.1rem;
-    margin: 0 0 0.35rem;
+    font-size: 1.05rem;
+    margin: 0 0 0.25rem;
   }
 
   .history li {
@@ -496,7 +496,8 @@ header p {
   }
 
   .other-zone-section {
-    margin-top: 0.35rem;
+    margin-top: 0.2rem;
+    padding-top: 0.5rem;
   }
 
   .history {
